<resources>
    <string name="app_name">Countryzador</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="createNewAcc">Create New Account</string>
    <string name="ok">Create</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="title_activity_main_menu">Countryzador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nume Prenume</string>
    <string name="nav_header_subtitle">Email@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profil">Profil</string>
    <string name="menu_test">Testeaza Cunostintele</string>
    <string name="menu_scor">Top</string>
    <string name="main_nav_home_title">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello! Go to our menu to start your journey!</string>
    <string name="fragment_profil_info">%1$s %2$s</string>
    <string name="fragment_profil_firstName"> First Name :       %1$s </string>
    <string name="fragment_profil_lastName">Last Name :     %1$s </string>
    <string name="fragment_profil_email">Email :    %1$s </string>
    <string name="fragment_profil_score">Score :    %1$d </string>
    <string name="invata">Invatare</string>
    <string name="lv_row_flag">flag</string>
    <string name="country_name">Country name</string>
    <string name="capital_name">Capital name</string>
    <string name="pop">Pop</string>
    <string name="currency">currency</string>
    <string name="system_of_government">System of Government</string>
    <string name="language">language</string>
    <string name="lv_row_default_value">-</string>
    <string name="enter_credentials">Enter your credentials</string>
    <string name="invalid_email">Your email is invalid</string>
    <string name="remember_me">Remember</string>
    <string name="error_insert_user">Error at inserting user</string>
    <string name="success_insert_user">Added new user</string>
    <string name="error_credentials">Wrong credentials</string>
    <string name="varianta1">%1$s</string>
    <string name="varianta2">%1$s</string>
    <string name="varianta3">%1$s</string>
    <string name="varianta4">%1$s</string>
    <string name="next_question">Urmatoarea intrebare</string>
    <string name="question">Question</string>
    <string name="endOfQuestions">Intrebarile s-au terminat</string>
    <string name="logout">Logout</string>
</resources>