<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- adaugati <item> pentru fiecare optiune pe care o doriti in meniul lateral-->
        <item
            android:id="@+id/main_nav_profil"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/main_nav_home_title"
            android:visible="true" />
        <item
            android:id="@+id/main_nav_invata"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/invata"
            android:visible="true" />
        <item
            android:id="@+id/main_nav_test"
            android:icon="@drawable/ic_baseline_ballot_24"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/main_nav_score"
            android:icon="@drawable/ic_baseline_score_24"
            android:title="@string/menu_scor" />
    </group>
</menu>