<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/lv_row_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_flag_24"
        android:contentDescription="@string/lv_row_flag" />

    <TextView
        android:id="@+id/tv_row_country_name"
        android:text="@string/country_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@id/lv_row_flag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_capital_name"
        />

    <TextView
        android:id="@+id/tv_capital_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/capital_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_row_country_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_population"
        android:text="@string/pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_systemOfGovernment"
        app:layout_constraintTop_toBottomOf="@id/tv_capital_name"
        />
    <TextView
        android:id="@+id/tv_systemOfGovernment"
        android:text="@string/system_of_government"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_row_country_name"
        app:layout_constraintStart_toEndOf="@id/lv_row_flag"
        app:layout_constraintEnd_toStartOf="@id/tv_population"
        app:layout_constraintBottom_toTopOf="@id/tv_language"
        />


    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/language"
        app:layout_constraintTop_toBottomOf="@id/tv_systemOfGovernment"
        app:layout_constraintStart_toEndOf="@id/lv_row_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_currency"
        />
    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/currency"
        app:layout_constraintTop_toBottomOf="@id/tv_population"
        app:layout_constraintStart_toEndOf="@id/tv_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>